hphp/test/zend/bad/Zend/tests/constants_002.php
<?php

define('foo', new stdClass);
var_dump(foo);

define('foo', fopen(__FILE__, 'r'));
var_dump(foo);

?>